# Georgian_words

./: CMakeLists.txt  KGrams.cpp  KGrams.h  main.cpp  mainClass.cpp  mainClass.h  output.txt  sources.cpp  sources.h  txtSrapper.cpp  txtSrapper.h
sources_for_words/: akakis_leqsebi.txt  jayo.txt  qartuli_wigni.txt
